--- a/app/views/dogs/_thumbnail.html.erb
+++ b/app/views/dogs/_thumbnail.html.erb
@@ -1,6 +1,13 @@
+<% if dog_counter.even? %>
+  <%= render partial: 'ad' %>
+<% end %>
+
 <a href="<%= url_for(dog) %>">
   <article>
     <h2 class="dog-name"><%= dog.name %></h2>
-    <%= image_tag url_for(dog.images.first), class: "dog-photo", alt: "Photo of #{dog.name}" %>
+    <% if dog.images.any? %>
+    	<%= image_tag url_for(dog.images.first), class: "dog-photo", alt: "Photo of #{dog.name}" %>
+    <% end %>
   </article>
 </a>
+
