--- a/app/views/dogs/_thumbnail.html.erb
+++ b/app/views/dogs/_thumbnail.html.erb
@@ -8,6 +8,8 @@
     <% if dog.images.any? %>
     	<%= image_tag url_for(dog.images.first), class: "dog-photo", alt: "Photo of #{dog.name}" %>
     <% end %>
+
+    <p>Likes in last hour:<%= dog.likes_in_last_hour %></p>
   </article>
 </a>
 
