--- a/app/views/dogs/_ad.html.erb
+++ b/app/views/dogs/_ad.html.erb
@@ -1,3 +1,3 @@
 <article class="ad">
-    <%= image_tag asset_url("ad.jpg"), class: "advertisement", alt: "advertisement", size: 100 %>
+    <%= image_tag "ad.jpg", class: "advertisement", alt: "advertisement" %>
 </article>
