--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -6,18 +6,19 @@
   <% end %>
 
   <p><%= @dog.description %></p>
+  <hr />
+  <% if user_signed_in? %>
+    <% if @dog.owner?(current_user) %>
+      <p><%= link_to "Edit #{@dog.name}'s Profile", edit_dog_path %></p>
 
-
-  Only show these if youre supposed to
-
-  <%= link_to "Edit #{@dog.name}'s Profile", edit_dog_path %>
-
-  <%= link_to "Delete #{@dog.name}'s Profile", dog_path, method: :delete %>
-  <br>
-  <%= link_to "Delete #{@dog.name}'s Profile", dog_path, method: :delete, data: { confirm: 'Are you sure?' } %>
-  <br>
-  <% unless current_user == @dog.owner %>
-    <%= button_to 'Like', dog_likes_path(@dog), method: :post %>
-    Or maybe you have already liked it.
+      <p><%= link_to "Delete #{@dog.name}'s Profile", dog_path, method: :delete, data: { confirm: 'Are you ruffly sure you want to delete this dog?' } %></p>
+    <% else %>
+      <% unless current_user.liked_dog?(@dog) %>
+        <%= button_to 'Like', dog_likes_path(@dog), method: :post %>
+      <% end %>
+    <% end %>
+  <% else %>
+    You must be signed in to get your paws on more features!
   <% end %>
+
 </section>
